pkg/lang/testdata/ub/inputs/invalid/nested-unknown-modifier.ub
inputs: {
  spec: {
    type: object({
      port: { type: integer, bogus: 1 },
    })
  }
}
